[gd_scene load_steps=59 format=3 uid="uid://dr3370ostip2o"]

[ext_resource type="Script" path="res://Player.gd" id="1_slhst"]
[ext_resource type="Texture2D" uid="uid://cxuj54fl1lpl8" path="res://One Off Assets/Civilian1_Move.png" id="2_bjlfw"]
[ext_resource type="Script" path="res://Camera2D.gd" id="3_52prf"]
[ext_resource type="Texture2D" uid="uid://bpkgech86isub" path="res://clipboard.png" id="4_8n4xh"]
[ext_resource type="Script" path="res://Clipboard.gd" id="5_8rh04"]
[ext_resource type="Script" path="res://Points.gd" id="5_b5ghj"]
[ext_resource type="Texture2D" uid="uid://bveaboh7ab1es" path="res://Button Itch Pack/Back/Back1.png" id="5_m2i8v"]
[ext_resource type="FontFile" uid="uid://cow8adf43n4sp" path="res://One Off Assets/PixeloidMono.ttf" id="6_eyrlg"]
[ext_resource type="AudioStream" uid="uid://dimold5uppadl" path="res://Sounds/Walking_On_Grass_Slow.wav" id="7_8pcy3"]
[ext_resource type="Texture2D" uid="uid://y78pitqbfy64" path="res://One Off Assets/icecream1.png" id="7_j0sx5"]
[ext_resource type="Texture2D" uid="uid://dl60uitm6muxa" path="res://One Off Assets/waterbottle.png" id="8_cs6yc"]
[ext_resource type="Texture2D" uid="uid://dp8tv567dkdvl" path="res://One Off Assets/icecream2.png" id="8_cwi7i"]
[ext_resource type="Texture2D" uid="uid://bpm2rb1mogyfq" path="res://One Off Assets/icecream3.png" id="9_8oy31"]
[ext_resource type="Texture2D" uid="uid://c2h8pw67ilfs2" path="res://One Off Assets/icecream4.png" id="10_kdes1"]
[ext_resource type="Script" path="res://WaterProgress.gd" id="10_u7adn"]
[ext_resource type="Texture2D" uid="uid://c28m5xwodduol" path="res://One Off Assets/icecream5.png" id="11_jkptv"]
[ext_resource type="AudioStream" uid="uid://bidbsm6jq3fm3" path="res://Sounds/Level Up (miniclip).wav" id="15_kjrc1"]
[ext_resource type="Texture2D" uid="uid://detplkii51rqs" path="res://leaderboard2.png" id="18_xhi6k"]

[sub_resource type="AtlasTexture" id="AtlasTexture_2nihc"]
atlas = ExtResource("2_bjlfw")
region = Rect2(0, 104, 52, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_mug2m"]
atlas = ExtResource("2_bjlfw")
region = Rect2(52, 104, 52, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_3v6pk"]
atlas = ExtResource("2_bjlfw")
region = Rect2(104, 104, 52, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_twr2l"]
atlas = ExtResource("2_bjlfw")
region = Rect2(156, 104, 52, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_j01kh"]
atlas = ExtResource("2_bjlfw")
region = Rect2(0, 208, 52, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_ah4mv"]
atlas = ExtResource("2_bjlfw")
region = Rect2(52, 208, 52, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_rbjop"]
atlas = ExtResource("2_bjlfw")
region = Rect2(104, 208, 52, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_vve0r"]
atlas = ExtResource("2_bjlfw")
region = Rect2(156, 208, 52, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_ustcx"]
atlas = ExtResource("2_bjlfw")
region = Rect2(0, 156, 52, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_7xmo8"]
atlas = ExtResource("2_bjlfw")
region = Rect2(52, 156, 52, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_tdv27"]
atlas = ExtResource("2_bjlfw")
region = Rect2(104, 156, 52, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_xi71h"]
atlas = ExtResource("2_bjlfw")
region = Rect2(156, 156, 52, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_atjqq"]
atlas = ExtResource("2_bjlfw")
region = Rect2(0, 260, 52, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_ol5pg"]
atlas = ExtResource("2_bjlfw")
region = Rect2(52, 260, 52, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_l4of7"]
atlas = ExtResource("2_bjlfw")
region = Rect2(104, 260, 52, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_evbg4"]
atlas = ExtResource("2_bjlfw")
region = Rect2(156, 260, 52, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_salxh"]
atlas = ExtResource("2_bjlfw")
region = Rect2(0, 0, 52, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_ko74q"]
atlas = ExtResource("2_bjlfw")
region = Rect2(52, 0, 52, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_ebiop"]
atlas = ExtResource("2_bjlfw")
region = Rect2(104, 0, 52, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_bhhs7"]
atlas = ExtResource("2_bjlfw")
region = Rect2(156, 0, 52, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_4xr3u"]
atlas = ExtResource("2_bjlfw")
region = Rect2(0, 52, 52, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_7mx8o"]
atlas = ExtResource("2_bjlfw")
region = Rect2(52, 52, 52, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_pixof"]
atlas = ExtResource("2_bjlfw")
region = Rect2(104, 52, 52, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_bewfa"]
atlas = ExtResource("2_bjlfw")
region = Rect2(156, 52, 52, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_318lj"]
atlas = ExtResource("2_bjlfw")
region = Rect2(0, 364, 52, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_km1r3"]
atlas = ExtResource("2_bjlfw")
region = Rect2(52, 364, 52, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_mwha0"]
atlas = ExtResource("2_bjlfw")
region = Rect2(104, 364, 52, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_e02jb"]
atlas = ExtResource("2_bjlfw")
region = Rect2(156, 364, 52, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_ndqkf"]
atlas = ExtResource("2_bjlfw")
region = Rect2(0, 312, 52, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_d3ewl"]
atlas = ExtResource("2_bjlfw")
region = Rect2(52, 312, 52, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_pivub"]
atlas = ExtResource("2_bjlfw")
region = Rect2(104, 312, 52, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_t2akl"]
atlas = ExtResource("2_bjlfw")
region = Rect2(156, 312, 52, 52)

[sub_resource type="SpriteFrames" id="SpriteFrames_f0h2g"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2nihc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mug2m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3v6pk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_twr2l")
}],
"loop": true,
"name": &"WalkEast",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j01kh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ah4mv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rbjop")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vve0r")
}],
"loop": true,
"name": &"WalkNorth",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ustcx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7xmo8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tdv27")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xi71h")
}],
"loop": true,
"name": &"WalkNorthEast",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_atjqq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ol5pg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l4of7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_evbg4")
}],
"loop": true,
"name": &"WalkNorthWest",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_salxh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ko74q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ebiop")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bhhs7")
}],
"loop": true,
"name": &"WalkSouth",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4xr3u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7mx8o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pixof")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bewfa")
}],
"loop": true,
"name": &"WalkSouthEast",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_318lj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_km1r3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mwha0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e02jb")
}],
"loop": true,
"name": &"WalkSouthWest",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ndqkf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d3ewl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pivub")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t2akl")
}],
"loop": true,
"name": &"WalkWest",
"speed": 7.0
}]

[sub_resource type="SystemFont" id="SystemFont_g365d"]
font_names = PackedStringArray("Pixeloid Mono")
subpixel_positioning = 0

[sub_resource type="LabelSettings" id="LabelSettings_bypiu"]
font = SubResource("SystemFont_g365d")
font_color = Color(0.98, 0.800333, 0, 1)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_b65xm"]
radius = 10.2216
height = 48.5441

[sub_resource type="Theme" id="Theme_813x2"]
default_font = ExtResource("6_eyrlg")

[sub_resource type="Theme" id="Theme_dj8g5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_82kbo"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_svtpl"]
bg_color = Color(0.447059, 0.560784, 0.858824, 0.741176)

[node name="Player" type="CharacterBody2D"]
up_direction = Vector2(0.707107, 0.707107)
script = ExtResource("1_slhst")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 1
position = Vector2(282, 127)
scale = Vector2(1.32041, 1.17172)
sprite_frames = SubResource("SpriteFrames_f0h2g")
animation = &"WalkNorthWest"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="AnimatedSprite2D"]
position = Vector2(-213.57, -108.388)
scale = Vector2(0.75734, 0.853446)
stream = ExtResource("7_8pcy3")

[node name="Points" type="Label" parent="AnimatedSprite2D"]
visible = false
offset_left = -21.2055
offset_top = -32.431
offset_right = 21.7945
offset_bottom = -9.43095
scale = Vector2(0.697581, 0.778767)
text = " +10"
label_settings = SubResource("LabelSettings_bypiu")
script = ExtResource("5_b5ghj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
z_index = 1
position = Vector2(282, 127)
scale = Vector2(0.684825, 0.535595)
shape = SubResource("CapsuleShape2D_b65xm")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(282, 127)
scale = Vector2(0.684825, 0.535595)
zoom = Vector2(2, 2)
script = ExtResource("3_52prf")

[node name="Button" type="Button" parent="Camera2D"]
z_index = 1000
offset_left = -419.085
offset_top = -302.467
offset_right = 88.9149
offset_bottom = 205.533
scale = Vector2(0.116262, 0.147418)
icon = ExtResource("4_8n4xh")
flat = true
metadata/_edit_use_anchors_ = true

[node name="Clipboard" type="Sprite2D" parent="Camera2D"]
visible = false
z_index = 1000
position = Vector2(-289.125, -112.025)
scale = Vector2(0.921141, 1.00424)
texture = ExtResource("4_8n4xh")
script = ExtResource("5_8rh04")

[node name="CloseButton" type="Button" parent="Camera2D/Clipboard"]
offset_left = 5.84096
offset_top = -82.1516
offset_right = 77.841
offset_bottom = -58.1516
icon = ExtResource("5_m2i8v")
flat = true

[node name="FormCompletedButton" type="Button" parent="Camera2D/Clipboard"]
offset_left = -77.6766
offset_top = -53.9166
offset_right = 76.3234
offset_bottom = -22.9166
theme = SubResource("Theme_813x2")
text = "Complete Form
"

[node name="1" type="Sprite2D" parent="Camera2D/Clipboard"]
visible = false
position = Vector2(-39.6309, 7.43677)
scale = Vector2(0.0915153, 0.0856516)
texture = ExtResource("7_j0sx5")

[node name="2" type="Sprite2D" parent="Camera2D/Clipboard"]
visible = false
position = Vector2(34.8752, 5.57758)
scale = Vector2(0.120271, 0.133325)
texture = ExtResource("8_cwi7i")

[node name="3" type="Sprite2D" parent="Camera2D/Clipboard"]
visible = false
position = Vector2(-41.2161, 59.4942)
scale = Vector2(0.101035, 0.139559)
texture = ExtResource("9_8oy31")

[node name="4" type="Sprite2D" parent="Camera2D/Clipboard"]
visible = false
position = Vector2(33.29, 59.4942)
scale = Vector2(0.0936931, 0.123608)
texture = ExtResource("10_kdes1")

[node name="5" type="Sprite2D" parent="Camera2D/Clipboard"]
visible = false
position = Vector2(-6.34092, 113.411)
scale = Vector2(0.114325, 0.128943)
texture = ExtResource("11_jkptv")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Camera2D/Clipboard"]
position = Vector2(-133.16, -124.566)
scale = Vector2(1.58524, 1.8592)
stream = ExtResource("15_kjrc1")

[node name="WaterBottle" type="Sprite2D" parent="Camera2D"]
light_mask = 0
visibility_layer = 2
z_index = 300
position = Vector2(395.722, 265.126)
scale = Vector2(0.0650137, 0.0717146)
texture = ExtResource("8_cs6yc")

[node name="WaterProgress" type="ProgressBar" parent="Camera2D/WaterBottle"]
light_mask = 0
offset_left = -124.008
offset_top = 382.19
offset_right = 100.992
offset_bottom = 432.19
rotation = -1.56476
scale = Vector2(2.53613, 5.60434)
theme = SubResource("Theme_dj8g5")
theme_override_styles/background = SubResource("StyleBoxEmpty_82kbo")
theme_override_styles/fill = SubResource("StyleBoxFlat_svtpl")
max_value = 5.0
rounded = true
show_percentage = false
script = ExtResource("10_u7adn")

[node name="Leaderboard" type="Sprite2D" parent="Camera2D"]
visible = false
z_index = 400
position = Vector2(2.92045, -1.86708)
scale = Vector2(0.356554, 0.549531)
texture = ExtResource("18_xhi6k")

[connection signal="draw" from="AnimatedSprite2D/Points" to="AnimatedSprite2D/Points" method="_on_draw"]
[connection signal="visibility_changed" from="AnimatedSprite2D/Points" to="AnimatedSprite2D/Points" method="_on_visibility_changed"]
[connection signal="pressed" from="Camera2D/Button" to="Camera2D" method="_on_button_pressed"]
[connection signal="pressed" from="Camera2D/Clipboard/CloseButton" to="Camera2D" method="_on_close_button_pressed"]
[connection signal="pressed" from="Camera2D/Clipboard/FormCompletedButton" to="." method="_on_form_comleted_button_pressed"]
[connection signal="pressed" from="Camera2D/Clipboard/FormCompletedButton" to="Camera2D/Clipboard" method="_on_form_completed_button_pressed"]
[connection signal="pressed" from="Camera2D/Clipboard/FormCompletedButton" to="Camera2D/WaterBottle/WaterProgress" method="_on_form_completed_button_pressed"]
